# pyne-dog-breeds

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pipeline.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: dim_breed.sql  dim_breed.yml  fact_weight_life_span.sql  fact_weight_life_span.yml
dbt/models/staging/: sources.yml  stg_breeds.sql  stg_breeds.yml
ingestion/: pipeline.py
ingestion/.dlt/: config.toml  secrets.toml
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_explore.py  test_fetch.py
